# rust-root-task-demo-mi-dev

./: .gitignore  Cargo.toml  Makefile  README.md  busybox  rust-toolchain.toml
.cargo/: config.toml
crates/alloc-helper/: Cargo.toml  README.md
crates/alloc-helper/src/: buddy.rs  lib.rs
crates/blk-thread/: Cargo.toml
crates/blk-thread/src/: main.rs  runtime.rs  virtio.rs  virtio_impl.rs
crates/byteos/: Cargo.toml
crates/byteos/src/: logging.rs  main.rs  panic.rs  socket.rs
crates/byteos/src/tasks/: initproc.rs  mod.rs
crates/byteos/src/user/: entry.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  obj_allocator.rs  uspace.rs  utils.rs
crates/crate-consts/: Cargo.toml
crates/crate-consts/src/: lib.rs
crates/example/: Cargo.toml
crates/example/src/: alloc_impl.rs  child.rs  elf.rs  image_utils.rs  ipc_call.rs  irq_test.rs  main.rs  object_allocator.rs  task.rs  utils.rs
crates/fs-thread/: Cargo.toml
crates/fs-thread/src/: dev.rs  fops.rs  macro.rs  main.rs  mounts.rs  root.rs  runtime.rs
crates/fs-thread/src/fs/: mod.rs  myfs.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: main.rs
crates/kernel-thread/: Cargo.toml
crates/kernel-thread/src/: child.rs  child_test.rs  ipc.rs  ipc_call.rs  irq_test.rs  main.rs  object_allocator.rs  runtime.rs  task.rs  thread.rs  utils.rs
crates/kernel-thread/src/syscall/: mod.rs
crates/kernel-thread/src/syscall/fs/: io.rs
crates/kernel-thread/src/syscall/mm/: brk.rs  mmap.rs
crates/kernel-thread/src/syscall/net/: ipc.rs  net_impl.rs
crates/kernel-thread/src/syscall/thread/: schedule.rs  task.rs
crates/net-thread/: Cargo.toml
crates/net-thread/src/: main.rs  run.rs  runtime.rs  smoltcp_impl.rs  virtio_impl.rs
crates/net-thread/src/ipc/: mod.rs
crates/net-thread/src/smoltcp_impl/: bench.rs  listen_table.rs  loopback.rs  mod.rs  tcp.rs  test.rs
crates/root-task/: Cargo.toml
crates/root-task/src/: main.rs  obj_allocator.rs  task.rs  tests.rs  thread.rs  utils.rs
crates/shim/: Cargo.toml
crates/shim-comp/: Cargo.toml  README.md  build.rs  linker.ld
crates/shim-comp/src/: lib.rs  main.rs  vsyscall.rs
crates/shim/src/: main.rs
crates/task-helper/: Cargo.toml  README.md
crates/task-helper/src/: lib.rs
crates/test-thread/: Cargo.toml
crates/test-thread/src/: main.rs
docker/: Dockerfile  Makefile  kernel-settings-aarch64.cmake
docs/: MicroKitUsage.md  Monolithic.md  Sel4-Based Kernel-v2.md  Sel4-Based Kernel.md  musl-libc.md  复现.md
docs/seL4 指北/: Rust-seL4 指北.typ  ref.yml  simple-template.typ
docs/介绍/: RootTask.md  怎么在 RootTask 创建一个任务.md
support/targets/: riscv64imac-sel4.json
