#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "crates/alloc-helper",
    "crates/kernel-thread",
    "crates/common",
    "crates/root-task",
    "crates/shim-comp",
    "crates/task-helper", 
    "crates/blk-thread", 
    "crates/crate-consts", 
    "crates/net-thread",
]
