[package]
name = "blk-thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-sys = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking-env = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-logging = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-initialize-tls-on-stack = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
spin = { version = "0.9.8" }
buddy_system_allocator = "0.10.0"
log = "0.4"
common = { path = "../common" }