#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "example"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-root-task = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
