[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-helper = { path = "../alloc-helper" }
crate-consts = { path = "../crate-consts" }
httparse = { version = "1.8.0", default-features = false }
sel4 = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-logging = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking-env = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-async-unsync = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-async-network = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-async-block-io-fat = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
spin = { version = "0.9.8" }
buddy_system_allocator = "0.10.0"
log = "0.4"
common = { path = "../common" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50"}
embedded-io-async = "0.6.1"

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = ["proto-ipv4", "proto-dhcpv4", "proto-dns", "socket-dhcpv4", "socket-dns", "socket-tcp"]
