#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "kernel-thread"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
alloc-helper = { path = "../alloc-helper" }
sel4 = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-sys = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking-env = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-logging = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-initialize-tls-on-stack = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
spin = { version = "0.9.8" }
log = "0.4"
xmas-elf = "0.9.1"
common = { path = "../common" }
syscalls = { version = "0.6", default-features = false }
crate-consts = { path = "../crate-consts" }
bitflags = "2.6"
memory_addr = "0.3"
axerrno = "0.1"
num_enum = { version = "0.7", default-features = false }