#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "kernel-thread"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-sys = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a", features = [
    "unwinding",
    "alloc",
] }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-dlmalloc = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-runtime-common = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a", features = [
    "start",
    "tls",
    "unwinding",
] }
spin = { version = "0.9.8" }
log = "0.4"
xmas-elf = "0.9.1"
common = { path = "../common" }
syscalls = { version = "0.6", default-features = false }
crate-consts = { path = "../crate-consts" }
sel4-elf-header = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-initialize-tls = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-stack = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }