[package]
name = "net-thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-helper = { path = "../alloc-helper" }
crate-consts = { path = "../crate-consts" }
sel4 = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-logging = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-panicking-env = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
spin = { version = "0.9.8" }
buddy_system_allocator = "0.10.0"
log = "0.4"
common = { path = "../common" }
lazyinit = "0.2"
axdriver_virtio = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0", features = ["net"] }
axdriver_net = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0" }
axerrno = "0.1"
virtio-drivers = "0.7.4"

# Http Server Dependencies
httparse = { version = "1.8.0", default-features = false }
sel4-async-single-threaded-executor = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-async-unsync = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-async-network = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-async-block-io-fat = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
embedded-io-async = "0.6.1"
sel4-shared-ring-buffer = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-shared-ring-buffer-block-io = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-shared-ring-buffer-smoltcp = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }

[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
rev = "8bf9a9a"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "proto-ipv6",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns", "proto-igmp",
  # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
  # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
  # "assembler-max-segment-count-32",
]
