[package]
name = "root-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-helper = { path = "../alloc-helper" }
sel4 = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-root-task = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
sel4-initialize-tls-on-stack = { git = "https://github.com/rel4team/rust-sel4", branch = "mi_dev" }
spin = { version = "0.9.8" }
buddy_system_allocator = "0.10.0"
xmas-elf = "0.9.1"
common = { path = "../common" }
task-helper = { path = "../task-helper" }
include_bytes_aligned = "0.1.3"
