[package]
name = "shim-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
common = { path = "../common" }
