[package]
name = "task-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", rev = "1cd063a" }
xmas-elf = "0.9.1"
crate-consts = { path = "../crate-consts" }
spin = { version = "0.9.8" }
object = { version = "0.36.1", default-features = false, features = ["read"] }
